tests/ui/infinite/infinite-macro-expansion.stderr
error: recursion limit reached while expanding `recursive!`
  --> $DIR/infinite-macro-expansion.rs:2:12
   |
LL | / macro_rules! recursive {
LL | |     () => (recursive!())
   | |            ^^^^^^^^^^^^ in this macro invocation (#2)
LL | | }
   | | -
   | | |
   | |_in this expansion of `recursive!` (#1)
   |   in this expansion of `recursive!` (#2)
...
LL |       recursive!()
   |       ------------ in this macro invocation (#1)
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`infinite_macro_expansion`)

error: aborting due to previous error

